[metadata]
name = aioaudio
version = 0.0.2
author = "esnya"
description = "Audio transport library with asyncio"
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/esnya/aioaudio
license = MIT
license_file = LICENSE


[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy

[options.packages.find]
where = src

[options.extras_require]
dev =
    bandit
local =
    pyaudio
websocket =
    websockets
all =
    %(dev)s
    %(local)s
    %(websocket)s
